# bind9-docker-ddns

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  short_description.txt
.github/workflows/: build-image.yaml  update-hub-description.yaml
bind9_docker_ddns/: __init__.py  bind.py  config.py  container.py  dns_record.py  entrypoint.py
